Fix MQTT callback signature for v2 API

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
             <a class="navbar-brand" href="#">🔧 IntentForge</a>
             <div>
                 <a href="/api/docs" class="btn btn-outline-light btn-sm me-2">API Docs</a>
-                <a href="https://github.com/softreck/intentforge" class="btn btn-light btn-sm">GitHub</a>
+                <a href="https://github.com/wronai/intent" class="btn btn-light btn-sm">GitHub</a>
             </div>
         </div>
     </nav>
@@ -28,7 +28,7 @@
         <h1 class="display-3 mb-4">IntentForge</h1>
         <p class="lead mb-4">Generowanie kodu z naturalnego języka przez MQTT</p>
         <p class="text-muted mb-5">Napisz co chcesz, a otrzymasz działający kod</p>
-        
+
         <div class="row justify-content-center g-4">
             <div class="col-md-4">
                 <div class="card feature-card h-100 p-4">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="mt-5">
             <a href="/examples/example2_static_html.html" class="btn btn-primary btn-lg me-3">
                 Wypróbuj Demo
