--- a/examples/usecases/01_contact_form.html
+++ b/examples/usecases/01_contact_form.html
@@ -70,7 +70,7 @@
                         </label>
                     </div>
 
-                    <button type="submit" class="btn btn-primary w-100">
+                    <button type="submit" class="btn btn-primary w-100" intent="po kliknieciu na button wyślij dane formularza na email zapisany w .env i zapisz do pliku logów">
                         Wyślij wiadomość
                     </button>
                 </form>
